Changelog
=========

8.1-dev - (unreleased)
----------------------
* Feature: Added generic PDF cover and PDF print CSS for all EEA content-types
  [voineali refs #14904]

8.0 - (2013-09-23)
------------------
* Change: lowered the font-size of portletHeader from manage pages now that
  the draggable actions are displayed
  [ichimdav fixes #16720]
* Feature: added style for keyFact class
  [ichimdav refs #9476]
* Feature: Improved print.css also used by PDF generators
  [voineali refs #14904]
* Bug fix: fixed login_form redirect after upgrade to Plone 4.3
  [ichimdav #16707]
* Bug fix: fixed css warnings for IE9Fixes.css discovered by Chrome Inspector
  [ichimdav]
* Bug fix: fixed display of input fields and window size of TinyMCE popups
  [ichimdav #16661]
* Feature: presentation mode improvements
  [batradav #16728]

7.9 - (2013-09-06)
------------------
* Change: removed tinymce.xml from eea.design and moved it to
  Products.EEAPloneAdmin since most of the configurations for our packages
  are done in it
  [ichimdav #9476]
* Bug fix: fixed display of whatsnewgallery tabs for IE
  [ichimdav #16633]
* Bug fix: Display no results within folder_listing template
  if folderContents comes form faceted query and it's empty
  [voineali refs #16624]
* Bug fix: use proper class names for accordion panels in order to correctly
  display the accordion arrows
  [ichimdav refs #15237]
* Change: moving Solgema.PortletsManager customisations to forked package
  [batradav refs #15623]

7.8 - (2013-08-28)
------------------
* Change: updated login_form.cpt and login_next.cpy with latest logic from
  Plone
  [ichimdav refs #16291]
* Bug fix: define portal_url within language_selector.pt
  [ichimdav refs #16291]

7.7 - (2013-08-22)
------------------
* Bug fix: no longer reference portal_syndication in templates since we use
  Plone 4.3 now
  [ichimdav refs #15969]

7.6 - (2013-08-19)
------------------
* Feature: display the text for full screen mode within TinyMCE in order to